fix overflow scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ html.fullscreen {
 }
 
 #root {
+    height: 100%;
     position: relative;
     font-size: 1rem;
     line-height: 1.3;
